k8s/infra/auth/lldap/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: lldap
  namespace: lldap
  annotations:
    io.cilium/lb-ipam-ips: 192.168.80.242
spec:
  type: LoadBalancer
  # https://kubernetes.io/docs/concepts/services-networking/cluster-ip-allocation/
  clusterIP: 10.96.0.15
  selector:
    app: lldap
  ports:
    - name: web
      port: 80
      targetPort: web
    - name: ldap
      port: 389
      targetPort: ldap
    - name: ldaps
      port: 636
      targetPort: ldaps
